# Dyxel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FROSTED_GLASS_FIX_SUMMARY.md  FROSTED_GLASS_IMPLEMENTATION.md  IDE_SETUP.md  IDE_SUPPORT_COMPLETE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  build_android.sh  build_ios.sh  build_mac.sh  build_web.sh  check_all.sh  fix.sh  guest.wasm  ios_integration_example.swift  sample.wasm
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/: scrum-framework-manager.md
android/: settings.gradle
android/app/: build.gradle
android/gradle/: libs.versions.toml
crates/dyxel-app/: Cargo.toml
crates/dyxel-app-macro/: Cargo.toml
crates/dyxel-core/: Cargo.toml  build.rs
crates/dyxel-core/src/: android_vblank.rs  blit.wgsl  bridge.rs  cadence.rs  dyxel_core.udl  engine.rs  frame_scheduler.rs  frame_timeline.rs  handler_registry.rs  input.rs  input_proxy.rs  keyboard.rs  lib.rs  pacer.rs  platform.rs  presenter.rs  render_mailbox.rs  render_worker.rs  renderer.rs  runtime.rs  spatial_index.rs  state.rs  transaction.rs
crates/dyxel-core/src/text_input/: manager.rs  mod.rs  test.rs
crates/dyxel-core/tests/: layout_registry_test.rs  transaction_test.rs
crates/dyxel-editor/: Cargo.toml
crates/dyxel-editor/src/: input.rs  lib.rs
crates/dyxel-gesture/: Cargo.toml
crates/dyxel-gesture/src/: arena.rs  events.rs  gesture_composition.rs  hit_test.rs  lib.rs  recognizer.rs  router.rs  router_integration.rs  spatial_hit_tester.rs  test_utils.rs
crates/dyxel-gesture/tests/: competition_tests.rs
crates/dyxel-lsp/: Cargo.toml
crates/dyxel-lsp/src/: lib.rs  main.rs  rsx_analyzer.rs
crates/dyxel-perf/: Cargo.toml
crates/dyxel-perf/src/: detailed_diag.rs  diagnostic.rs  lib.rs  memory_optimizer.rs  platform.rs
crates/dyxel-perf/src/platform/: android.rs  macos.rs  web.rs
crates/dyxel-perf/tests/: platform_test.rs
crates/dyxel-render-api/: Cargo.toml
crates/dyxel-render-bootstrap/: Cargo.toml
crates/dyxel-render-bootstrap/src/: lib.rs
crates/dyxel-render-impeller/: Cargo.toml
crates/dyxel-render-impeller/src/: android.rs  backend.rs  factory.rs  lib.rs  mac.rs  runtime.rs
crates/dyxel-render-vello/: Cargo.toml  build.rs
crates/dyxel-render-vello/src/: android.rs  android_native_presenter.rs  android_native_wgpu_ahb.rs  backend.rs  blur_atlas_instanced_composite.wgsl  blur_composite.wgsl  blur_instanced_composite.wgsl  cache.rs  cold_start.rs  color.rs  composite_pipeline.rs  coordinates.rs  debug_utils.rs  factory.rs  filter_pipeline.rs  foreign_texture.rs  frame.rs  frame_context.rs  keyboard.rs  layer.rs  legacy_backend.rs  lib.rs  mac.rs  minimal_shaders.rs  offscreen_renderer.rs  raster_cache.rs  render_helpers.rs  runtime.rs  scene_adapter.rs  scene_renderer.rs  shader_cache.rs  shadow.rs  staged_init.rs  staged_loader.rs  state.rs  text.rs  texture_pool.rs  two_stage_init.rs  web.rs
crates/dyxel-render-vello/src/blur/: atlas.rs  atlas_pass.rs  children.rs  composite.rs  dirty.rs  entry.rs  mod.rs  passes.rs  pipeline.rs  types.rs
crates/dyxel-render-vello/src/experimental/: composite_pipeline.rs  layer.rs  mod.rs
crates/dyxel-render-vello/src/shaders/: dual_filter_blur.wgsl  frosted_glass.wgsl  kawase_blur.wgsl  layer_composite.wgsl
crates/dyxel-render-vello/tests/: double_layer_smoke.rs  vello_integration_smoke.rs  vello_render_to_texture_smoke.rs
crates/dyxel-rsx/: Cargo.toml
crates/dyxel-rsx/src/: lib.rs
crates/dyxel-shared/: Cargo.toml
crates/dyxel-state/: Cargo.toml
crates/dyxel-view/: Cargo.toml
crates/dyxel-view/src/: dual_track_wasm.rs  filters.rs  focus.rs  focus_manager.rs  gesture.rs  lib.rs  shadow_layout.rs  text_renderable.rs
crates/dyxel-view/src/components/: button.rs  flex.rs  mod.rs  text_input.rs  text_input.rs.bak  text_input_new.rs
crates/host-android/: Cargo.toml
crates/host-android/src/: lib.rs
crates/host-core/: Cargo.toml  build.rs
crates/host-core/src/: bridge.rs  engine.rs  host_core.udl  input.rs  lib.rs  platform.rs  renderer.rs  runtime.rs  state.rs
crates/host-mac/: Cargo.toml
crates/host-mac/src/: main.rs
crates/host-web/: Cargo.toml
crates/host-web/src/: lib.rs
crates/shared/: Cargo.toml
crates/vello-view/: Cargo.toml
crates/wasm3/: Cargo.toml
docs/: DUAL_TRACK_IMPLEMENTATION.md  android_perf.md  android_perf_summary.md  architecture_comparison.md  current-render-vello-architecture.md  editor_integration.md  gesture_architecture.md  gesture_orchestration_design.md  gesture_system_design.md  gesture_system_refactoring.md  host_transaction_impl.md  impeller-android-vulkan-size-plan.md  implementation_plan.md  implementation_report.md  input-proxy-design.md  optimization-summary.md  runtime_todo.md  shader-lazy-loading-design.md  text_input_design.md  transaction_api.md  vello-optimization-implementation.md  vello-optimization-plan.md
docs/zh-cn/: README.md  current-render-vello-architecture.md
editors/vscode/: README.md  dyxel-vscode-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
mac/: Cargo.toml
mac/src/: context_menu.rs  display_link.rs  (+2 more)
sample/: Cargo.toml  MODULE_GUIDE.md  README.md  README_FINAL_DEMO.md
sample/.cargo/: config.toml
sample/src/: button_demo.rs  capacity_test_demo.rs  combined_demo.rs  dual_track_1000_demo.rs  final_demo.rs  flex_demo.rs  gesture_demo.rs  gesture_orchestration.rs  gesture_state_demo.rs  input_proxy_demo.rs  layer_effects_demo.rs  lib.rs  minimal_test.rs  offscreen_rendering_demo.rs  offscreen_rsx_demo.rs  offscreen_validation_demo.rs  perf_logic_heavy.rs  perf_mixed_heavy.rs  perf_render_heavy.rs  shadow_layout_demo.rs  state_binding_demo.rs  stress_test.rs  text_input_demo.rs  text_input_demo_final.rs  text_input_empty_test.rs  text_input_minimal.rs  text_input_simple_test.rs  text_input_test_final.rs  transaction_demo.rs
scripts/: android_perf.sh  android_run.sh
tasks/: lessons.md  product_backlog.md
tests/: README.md  text_input_integration.rs
web/: Cargo.toml  index.html  sample.wasm  text-demo.html
web/src/: lib.rs
(+72 files in other folders)
