[workspace]
members = [
    "crates/dyxel-core",
    "sample",
    "mac",
    "web",
    "crates/dyxel-shared",
    "crates/dyxel-view",
    "crates/wasm3",
    "crates/dyxel-render-api",
    "crates/dyxel-render-impeller",
    "crates/dyxel-render-vello",
    "crates/dyxel-editor",
    "crates/dyxel-perf"
]
resolver = "2"

[workspace.dependencies]
bincode = "=1.3.3"
serde = { version = "1.0", features = ["derive"] }
dyxel-shared = { path = "crates/dyxel-shared" }
dyxel-view = { path = "crates/dyxel-view" }
dyxel-core = { path = "crates/dyxel-core" }
dyxel-perf = { path = "crates/dyxel-perf" }
futures-signals = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
taffy = "0.9"
vello = "0.7"
wasm3 = { path = "crates/wasm3", default-features = false, features = ["build-bindgen", "std", "use-32bit-slots"] }
# Pin version
wgpu = { version = "27.0.1", features = ["spirv"] }
wasm-bindgen = "0.2.91"
web-sys = "0.3.68"
parley = "0.7"
kurbo = "0.13"
peniko = "0.6"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = false
codegen-units = 1

[profile.dev]
panic = "abort"
