[package]
name = "dyxel-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dyxel-core = { path = "../crates/dyxel-core" }
dyxel-shared = { path = "../crates/dyxel-shared" }
dyxel-render-api = { path = "../crates/dyxel-render-api" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "Response",
    "console",
    "MouseEvent",
    "CssStyleDeclaration",
] }
kurbo = "0.13"
futures-util = "0.3"
console_error_panic_hook = "0.1"
vello = { workspace = true }
log = "0.4"
wasm-logger = "0.2"
