[package]
name = "dyxel-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["vello", "wasm3-support"]
# Only enable real wasm3 support on non-wasm32 platforms
wasm3-support = ["dep:wasm3"]
vello = []

[dependencies]
dyxel-shared.workspace = true
dyxel-render-api = { path = "../dyxel-render-api" }
dyxel-render-vello = { path = "../dyxel-render-vello" }
dyxel-perf = { path = "../dyxel-perf" }
dyxel-gesture = { path = "../dyxel-gesture" }
dyxel-editor = { path = "../dyxel-editor" }
wgpu = { workspace = true, features = ["spirv"] }
vello = { workspace = true, features = ["wgpu"] }
peniko = { version = "0.6" }
taffy.workspace = true
anyhow = "1.0"
kurbo = "0.13"
skrifa = "0.22"
uniffi = { version = "0.28", features = ["cli"] }
pollster = "0.3"
log = "0.4"
crossbeam-channel = "0.5"
raw-window-handle = "0.6"
parley.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Only include wasm3 crate on non-wasm32 targets
wasm3 = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window"] }
console_log = "1.0"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
ndk-sys = "0.6"
jni = "0.21"
backtrace = "0.3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
naga = { version = "27.0.3", features = ["wgsl-in", "spv-out"] }
bytemuck = "1.12"
