[package]
name = "dyxel-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance", "Window", "Navigator"] }
js-sys = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-sys = "0.6"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
