[package]
name = "dyxel-rsx"
version = "0.1.0"
edition = "2021"
description = "RSX macro for declarative UI in Dyxel"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
