[package]
name = "dyxel-view"
version = "0.1.0"
edition = "2021"

[dependencies]
dyxel-shared.workspace = true
dyxel-state = { path = "../dyxel-state" }
dyxel-rsx = { path = "../dyxel-rsx" }
futures-signals.workspace = true
futures-util.workspace = true

# Shadow Layout: WASM-side layout estimation
taffy = { version = "0.9", default-features = false, features = ["flexbox"] }
