[package]
name = "host-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
host-core = { path = "../host-core", features = ["wasm3-support"] }
jni = "0.21"
ndk-sys = "0.4"
android_logger = "0.13"
log = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
raw-window-handle = "0.5"
