[package]
name = "host-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
wasm3-support = ["wasm3"]

[dependencies]
shared.workspace = true
vello = { workspace = true, features = ["wgpu"] }
peniko = { version = "0.6" }
wgpu = { workspace = true, features = ["spirv"] }
taffy.workspace = true
wasm3 = { workspace = true, optional = true }
anyhow = "1.0"
kurbo = "0.13"
skrifa = "0.22"
uniffi = { version = "0.28", features = ["cli"] }
pollster = "0.3"
log = "0.4"
tokio = { version = "1", features = ["sync"] }
raw-window-handle = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window"] }
console_log = "1.0"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
ndk-sys = "0.6"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
naga = { version = "0.20", features = ["wgsl-in", "spv-out"] }
