[package]
name = "host-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
host-core = { path = "../host-core" }
shared = { path = "../shared" }
vello = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = ["Window", "Document", "HtmlCanvasElement", "console", "CssStyleDeclaration", "Element", "Node", "Response"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
anyhow = "1.0"
kurbo = "0.13"
taffy = "0.9"

# 禁用报错的 wasm-opt 步骤，或者可以配置它
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
